# ShoppingList

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  README.txt  development.ini  help.mk  production.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml
shoppinglist/: __init__.py  cache.py  filters.py  models.py  tests.py  views.py
shoppinglist/scripts/: initializedb.py
shoppinglist/static/: SHA256SUMS  emoji.js  shoppinglist.css  shoppinglist.js
shoppinglist/templates/: list.mako  mytemplate.pt
